# ark_bridge

./: .gitignore  CMakeLists.txt  INFO.txt  README.md  build_client.sh  build_server.sh  package.xml  rosmsg-gen.sh  rosrepub-gen.sh
ark/: ArkConfigSettingsCall.hpp  ArkConfigSettingsResponse.hpp  Attribute.hpp  Bool.hpp  Clock.hpp  CompressedMapData.hpp  ControlSelectionState.hpp  ControlState.hpp  DistanceToGoal.hpp  Empty.hpp  Float64.hpp  GeometryArray.hpp  GeometryFeature.hpp  GetCurrentMapResponse.hpp  GoalID.hpp  GoalStatus.hpp  GoalStatusArray.hpp  Header.hpp  LaserScan.hpp  MapInfoResponse.hpp  MapMetaData.hpp  Mode.hpp  OccupancyGrid.hpp  Odometry.hpp  Path.hpp  PauseControlCall.hpp  PauseControlResponse.hpp  PauseStatus.hpp  Point.hpp  Pose.hpp  PoseArray.hpp  PoseStamped.hpp  PoseWithCovariance.hpp  PoseWithCovarianceStamped.hpp  Quaternion.hpp  SaveMapToDiskCall.hpp  Status.hpp  String.hpp  StringArray.hpp  Transform.hpp  (+8 more)
autosrc/: CMakeLists.txt  ark_config_settings_call_republisher.cpp  ark_config_settings_response_republisher.cpp  ark_start_call_republisher.cpp  ark_start_response_republisher.cpp  ark_stop_call_republisher.cpp  ark_stop_response_republisher.cpp  clock_echo_republisher.cpp  clock_republisher.cpp  control_selection_autonomy_clear_all_disabled_call_republisher.cpp  control_selection_autonomy_clear_all_disabled_response_republisher.cpp  control_selection_autonomy_clear_all_paused_call_republisher.cpp  control_selection_autonomy_clear_all_paused_response_republisher.cpp  control_selection_autonomy_disable_call_republisher.cpp  control_selection_autonomy_disable_response_republisher.cpp  control_selection_autonomy_enable_call_republisher.cpp  control_selection_autonomy_enable_response_republisher.cpp  control_selection_autonomy_pause_call_republisher.cpp  control_selection_autonomy_pause_response_republisher.cpp  control_selection_autonomy_resume_call_republisher.cpp  control_selection_autonomy_resume_response_republisher.cpp  control_selection_control_state_republisher.cpp  control_selection_core_clear_all_disabled_call_republisher.cpp  control_selection_core_clear_all_disabled_response_republisher.cpp  control_selection_core_clear_all_paused_call_republisher.cpp  control_selection_core_clear_all_paused_response_republisher.cpp  control_selection_core_disable_call_republisher.cpp  control_selection_core_disable_response_republisher.cpp  control_selection_core_enable_call_republisher.cpp  control_selection_core_enable_response_republisher.cpp  control_selection_core_pause_call_republisher.cpp  control_selection_core_pause_response_republisher.cpp  control_selection_core_resume_call_republisher.cpp  control_selection_core_resume_response_republisher.cpp  control_selection_set_mode_call_republisher.cpp  control_selection_set_mode_response_republisher.cpp  e_stop_republisher.cpp  front_scan_republisher.cpp  map_data_clear_call_republisher.cpp  map_data_clear_response_republisher.cpp  (+43 more)
examples/: clearMap.py  currentLocation.py  hintPosition.py  pauseAutonomy.py  pauseCore.py  resumeAutonomy.py  resumeCore.py  sendGoal.py  setAutonomous.py  setLocalize.py  setManual.py  setNeutral.py  setSLAM.py  startARK.py
launch/: ark_client_republishers.launch  ark_server_republishers.launch  client.launch  client_msg_shims.launch  client_service_providers.launch  server.launch  server_msg_shims.launch  server_service_callers.launch  server_service_shims.launch
lcm/: ArkConfigSettingsCall.lcm  ArkConfigSettingsResponse.lcm  Attribute.lcm  AutonomyMode.lcm  Bool.lcm  Clock.lcm  CompressedMapData.lcm  ControlSelectionState.lcm  ControlState.lcm  DiagnosticArray.lcm  DiagnosticsStatus.lcm  DistanceToGoal.lcm  Empty.lcm  Float64.lcm  GeometryArray.lcm  GeometryFeature.lcm  GetCurrentMapResponse.lcm  GoalID.lcm  GoalStatus.lcm  GoalStatusArray.lcm  Header.lcm  KeyValue.lcm  LaserScan.lcm  LocalizationStatus.lcm  MapInfoResponse.lcm  MapMetaData.lcm  Mode.lcm  OccupancyGrid.lcm  Odometry.lcm  Path.lcm  PauseControlCall.lcm  PauseControlResponse.lcm  PauseStatus.lcm  Point.lcm  PointCloud2.lcm  PointField.lcm  Pose.lcm  Pose2D.lcm  Pose2DArray.lcm  PoseArray.lcm  (+26 more)
msg/: ArkConfigSettingsCall.msg  ArkConfigSettingsResponse.msg  Attribute.msg  Bool.msg  Clock.msg  CompressedMapData.msg  ControlSelectionState.msg  ControlState.msg  DistanceToGoal.msg  Empty.msg  Float64.msg  GeometryArray.msg  GeometryFeature.msg  GetCurrentMapResponse.msg  GoalID.msg  GoalStatus.msg  GoalStatusArray.msg  Header.msg  LaserScan.msg  MapInfoResponse.msg  MapMetaData.msg  Mode.msg  OccupancyGrid.msg  Odometry.msg  Path.msg  PauseControlCall.msg  PauseControlResponse.msg  PauseStatus.msg  Point.msg  Pose.msg  PoseArray.msg  PoseStamped.msg  PoseWithCovariance.msg  PoseWithCovarianceStamped.msg  Quaternion.msg  SaveMapToDiskCall.msg  Status.msg  String.msg  StringArray.msg  Transform.msg  (+7 more)
repub_configs/: ark_client_republishers.cfg  ark_server_republishers.cfg
scripts/: bridge_health.py  configure_ark.py  goal_receiver.py
src/: CMakeLists.txt  CMakeLists_client.txt  CMakeLists_server.txt  arkconfigsettings_service.cpp  arkconfigsettings_service_caller.cpp  arkconfigsettings_service_provider.cpp  autonomymode_bridge.cpp  bool_bridge.cpp  bridge_health.py  clock_bridge.cpp  compressedmapdata_bridge.cpp  controlselectionstate_bridge.cpp  deletemap_service.cpp  deletemap_service_caller.cpp  deletemap_service_provider.cpp  diagnosticarray_bridge.cpp  distancetogoal_bridge.cpp  empty_bridge.cpp  empty_service.cpp  empty_service_caller.cpp  empty_service_provider.cpp  float64_bridge.cpp  geometryarray_bridge.cpp  getcurrentmap_service.cpp  getcurrentmap_service_caller.cpp  goalstatusarray_bridge.cpp  laserscan_bridge.cpp  lcm2ros_default_republisher.cpp.in  listmaps_service.cpp  listmaps_service_caller.cpp  listmaps_service_provider.cpp  loadmapfromdisk_service.cpp  loadmapfromdisk_service_caller.cpp  loadmapfromdisk_service_provider.cpp  localizationstatus_bridge.cpp  mapinfo_service.cpp  mapinfo_service_caller.cpp  mode_bridge.cpp  occupancygrid_bridge.cpp  odom_bridge.cpp  (+36 more)
srv/: DeleteMap_service.srv  (+9 more)
